Refactored backend auth, refactored backend services